fixed spacing on dots for admin dash profile

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -276,7 +276,7 @@ a[href], input[type='submit'], input[type='image'], label[for], select, button, 
   min-height: 10px
   display: inline
   padding: 5px
-  width: 160%
+  width: 180%
   text-align: left
 
 .timeline-inside
@@ -293,10 +293,9 @@ a[href], input[type='submit'], input[type='image'], label[for], select, button, 
 
 
 .timeline-dot
-  margin-right: 30px
-
+  margin-right: 55px
+  color: darkgrey
   +pointer
-  +circle
 
 .circles-text
   line-height: 10px !important
